--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>GDSuperMoon's Blog</title>
-    <script src="https://kit.fontawesome.com/072cc4a922.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-touch/1.8.0/angular-touch.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular/10.1.2/core.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/create-react-class/15.6.3/create-react-class.min.js"></script>
+<script src="https://kit.fontawesome.com/072cc4a922.js" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="package.json" rel="stylesheet" type="text/json" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
     <script src="script.js" integrity="" crossorigin="anonymous"></script>
     <!-- Primary Meta Tags -->
